# SoftServe-Lv-649.Cpp

./: .gitignore  AnyType.cpp  AnyType.hpp  Github-Task.txt  README.md  githubtask.txt  main.cpp
Denys Bykov/Task1/: StringList.cpp  StringList.hpp  test.cpp
Denys Bykov/Task2/: AnyType.hpp  test.cpp
Denys Bykov/Task3/: Analyzer.cpp  Analyzer.hpp  ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  Config.cpp  Config.hpp  main.cpp  test.cpp
Denys Bykov/Task3/test_data/: file.cpp  file.h  file.hpp
Dmytro Hulivatyi/Task 2/: AnyType.cpp  AnyType.h  main.cpp
Dmytro Hulivatyi/Task 3/: main.cpp  projStats.cpp  projStats.h
Maksym Terekhovskyi/: task.txt
Maksym Terekhovskyi/task1/: Source.cpp  StringList.cpp  StringList.h
Maksym Terekhovskyi/task2/: AnyType.cpp  AnyType.h  Source.cpp  task2.sln
Maksym Terekhovskyi/task2/task2/: AnyType.h  Source.cpp  task2.vcxproj  task2.vcxproj.filters
Maksym Terekhovskyi/task3/: Source.cpp  result.txt
Serhii Lakhman/Task 1/: StringList.cpp  StringList.h  TestOfList.cpp
Serhii Lakhman/Task 2/: CAnyType.h  CAnyType.inl  MyException.h
Serhii Lakhman/Task 3/: CounterForGroupOfFiles.cpp  CounterForGroupOfFiles.h  CounterForOneFile.cpp  CounterForOneFile.h  Timer.h  info.txt
Vasyl Dobrovolski/: Task1.cpp  Task1.hpp  TestTask1.cpp
Yaroslav Kernitskyi/task1/: CMakeLists.txt  Test.cpp
Yaroslav Kernitskyi/task1/include/: Node.hpp  String.hpp  StringList.hpp
Yaroslav Kernitskyi/task1/src/: Node.cpp  String.cpp  StringList.cpp
Yaroslav Kernitskyi/task2/: CMakeLists.txt  test.cpp
Yaroslav Kernitskyi/task2/include/: AnyType.hpp  TypeName.hpp  Utils.hpp
Yaroslav Kernitskyi/task3/: CMakeLists.txt
Yaroslav Kernitskyi/task3/include/: FileAnalysis.hpp  ProjectAnalysis.hpp  ProjectAnalysisInfo.hpp  Utils.hpp
Yaroslav Kernitskyi/task3/src/: FileAnalysis.cpp  ProjectAnalysis.cpp  ProjectAnalysisInfo.cpp  Utils.cpp  main.cpp
Yaroslav Kernitskyi/task3/test/: Test.cpp
